Add information and quote section.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                     </ul>
                 </div>
             </div>
-
             <div class="welcome">
                 <div class="left">
                     <div class="main">
@@ -34,9 +33,36 @@
                     </button>
                 </div>
                 <div class="right">
-                    <img class="right" src="img/OP.jpg">    
+                    <img class="right" src="img/OP.jpg" alt="Optimus Prime">    
                 </div>
             </div>
+        </div>
+        <div class="info">
+            <div class="infoheader">
+                Meet Team Prime
+            </div>
+            <div class="infocontainer">
+                <div class="infobox">
+                    <img class="infopic" src="img/bumblebee.png" alt="Bumblebee">
+                    <div class="text"><h2>Bumblebee</h2><p>the best Autobot scout</p></div>
+                </div>
+                <div class="infobox">
+                    <img class="infopic" src="img/rachet.jpg" alt="Rachet">
+                    <div class="text"><h2>Rachet</h2><p>the Autobot medical officer</p></div>
+                </div>
+                <div class="infobox">
+                    <img class="infopic" src="img/arcee.jpg" alt="Arcee">
+                    <div class="text"><h2>Arcee</h2><p>the speedy Autobot sharpshooter</p></div>
+                </div>
+                <div class="infobox">
+                    <img class="infopic" src="img/bulkhead.jpg" alt="Bulkhead">
+                    <div class="text"><h2>Bulkhead</h2><p>the strong Autobot wrecker</p></div>
+                </div>
+            </div>
+        </div>
+        <div class="quote">
+            <div class="quotetext">Without a means of leaving this world, we Autobots take strength in the bonds we have forged with our three young friends - true warriors. If not in body, then in spirit. My name is Optimus Prime, and I send this message. Though we did not choose to be of Earth, it would seem that we are here to stay. If you approach this planet with hostile intent, know this: We will defend ourselves. We will defend humanity. We will defend... our home.</div>
+            <div class="from">-Optimus Prime, leader of the Autobots</div>
         </div>
     </body>
 
