Add final sections and complete project

--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
     <body>
         <div class="hero">
             <div class="header">
-                <div class="logo">
-                    Header Logo
-                </div>
+                <div class="logo">Header Logo</div>
                 <div class="links">
                     <ul>
                         <li><a href="google.come">header link one</a></li>
@@ -63,6 +61,17 @@
         <div class="quote">
             <div class="quotetext">Without a means of leaving this world, we Autobots take strength in the bonds we have forged with our three young friends - true warriors. If not in body, then in spirit. My name is Optimus Prime, and I send this message. Though we did not choose to be of Earth, it would seem that we are here to stay. If you approach this planet with hostile intent, know this: We will defend ourselves. We will defend humanity. We will defend... our home.</div>
             <div class="from">-Optimus Prime, leader of the Autobots</div>
+        </div>
+        <div class="actionbox">
+            <div class="action">
+                <div class="message">
+                    <h2>Call to Action! It's time!</h2><p>Sign up by clicking that botton right over there!</p>
+                </div>
+                <button class="action">Sign up</button>
+            </div>
+        </div>    
+        <div class="footer">
+            <div class="legal">Copyright © The Odin Project 2023</div>
         </div>
     </body>
 
